# profilr

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: cli.rs  collector.rs  compare.rs  config.rs  languages.rs  lib.rs  main.rs  model.rs  profile.rs  report.rs  snippet.rs  tui.rs  workload.rs
