[package]
name = "profilr"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Milo Evans"]
description = "Fast project, command, and snippet profiler with a responsive terminal UI"
repository = "https://github.com/milobeans/profilr"
homepage = "https://github.com/milobeans/profilr"
readme = "README.md"
license = "MIT"
keywords = ["profiler", "performance", "tui", "cli", "benchmark"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
ignore = "0.4.23"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
